# dns-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  dns_server.conf  example.zone  roots.hint
.github/workflows/: c.yml
docs/: negative-cache.md  parsing.md  udp.md
include/: dns_cache.h  dns_error.h  dns_log.h  dns_parser.h  dns_records.h  dns_recursive.h  dns_resolver.h  dns_server.h  dns_trie.h  dns_zone_file.h
src/: dns_cache.c  dns_error.c  dns_log.c  dns_parser.c  dns_records.c  dns_recursive.c  dns_resolver.c  dns_server.c  dns_trie.c  dns_zone_file.c  main.c
test/: test_dns_bugs.c  test_dns_cache.c  test_dns_log.c  test_dns_parser.c  test_dns_records.c  test_dns_recursive.c  test_dns_resolver.c  test_dns_server.c  test_dns_trie.c  test_dns_zone_file.c
